gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail5953a1.d
version https://git-lfs.github.com/spec/v1
oid sha256:a941bf4b607cd33b552e6a03f0734ef34e3be2ac5c562b453d5f6268e0176e8f
size 160
